--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.2
+  font_awesome_flutter: ^8.7.0
+  page_transition: "^1.1.5"
 
 
 dev_dependencies:
@@ -20,7 +22,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/
+    - assets/images/
 
   fonts:
 
