--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
   cupertino_icons: ^0.1.2
   font_awesome_flutter: ^8.7.0
   page_transition: "^1.1.5"
+  firebase_core: ^0.4.4+2
+  firebase_auth: ^0.15.5+2
+  cloud_firestore: any
+
 
 
 dev_dependencies:
