--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_core: ^0.4.4+2
   firebase_auth: ^0.15.5+2
   cloud_firestore: any
+  provider: ^4.0.4
 
 
 
@@ -31,16 +32,16 @@ flutter:
   fonts:
   - family: PhosphateInline
     fonts:
-     - asset: fonts/PhosphateInline.ttf
+     - asset: assets/fonts/PhosphateInline.ttf
 
   - family: OpenSans-Bold
     fonts:
-     - asset: fonts/OpenSans-Bold.ttf
+     - asset: assets/fonts/OpenSans-Bold.ttf
 
   - family: OpenSans-Regular
     fonts:
-     - asset: fonts/OpenSans-Regular.ttf
+     - asset: assets/fonts/OpenSans-Regular.ttf
 
   - family: OpenSans-Light
     fonts:
-     - asset: fonts/OpenSans-Light.ttf
+     - asset: assets/fonts/OpenSans-Light.ttf
