--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   firebase_core: ^0.4.4+2
   firebase_auth: ^0.15.5+2
   cloud_firestore: any
+  get_it: ^4.0.1
+  provider: ^4.0.4
 
 
 
