--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   splashscreen: ^1.2.0
   oktoast: ^2.3.2
   carousel_slider: ^2.0.0
+  flutter_rating_bar: ^3.0.1+1
 
 
 dev_dependencies:
